--- a/styles.css
+++ b/styles.css
@@ -14,15 +14,31 @@
     text-align: center;
 }
 
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-width: 10px;
+    border-color: black;
+    justify-content: space-around;
+}
+
 #mainnotice {
     color: red;
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
+    flex: 1;
+    
+}
+
+.image1 {
+    flex:1;
 }
 
 #text {
     color: black;
-    font-size: 12px;
+    font-size: 20px;
     text-align: center;
-
+    width: 400px;
 }
+
